# evac-sim-scw

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: example_school.json  irregular_school.json  scenario.yaml  scenario_100_students.yaml  scw.json  scw_deurgrootte.json  scw_gangverbreding.json  test.yaml  test_100.yaml  test_100_irr.yaml  test_full.yaml  test_school.json
src/evac_sim_scw/: __init__.py  cli.py  config_loader.py  logging_setup.py
src/evac_sim_scw/agents/: __init__.py  agent.py  behavior.py  collision_avoidance.py  population.py  route_choice.py  social_force.py
src/evac_sim_scw/analysis/: __init__.py  charts.py  summaries.py
src/evac_sim_scw/config/: scenario.yaml
src/evac_sim_scw/geometry/: __init__.py  building.py  layout_loader.py  layout_schema.py  nav_graph.py  spatial_index.py  stairs.py
src/evac_sim_scw/io/: csv_writer.py  json_writer.py
src/evac_sim_scw/replay/: __init__.py  interpolation.py  reader.py  writer.py
src/evac_sim_scw/simulation/: congestion.py  density.py  engine.py  evacuation.py  metrics.py  stair_movement.py  state.py
src/evac_sim_scw/visualization/: __init__.py  server.py
src/evac_sim_scw/visualization/static/: app.js  building_renderer.js  camera.js  index.html  replay.js  style.css
