[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evac_sim_scw"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy>=1.26,<3",
  "PyYAML>=6.0,<7",
  "matplotlib>=3.8,<4",
]

[project.scripts]
evac_sim_scw = "evac_sim_scw.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]